<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/book_detail_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".BookDetailActivity">

    <TextView
        android:id="@+id/tv_book_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_detail"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#EBEBEB"
        android:fontFamily="@font/raleway_bold"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>
<!--        app:layout_constraintGuidePercent="0.15" />-->

    <ImageView
        android:id="@+id/detail_book_cover"
        android:layout_width="120dp"
        android:layout_height="180dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/mockingbird"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_book_detail_title"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@drawable/mockingbird" />

    <TextView
        android:id="@+id/detail_synopsis_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/synopsis"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/detail_book_cover"
        app:layout_constraintTop_toTopOf="@+id/detail_book_cover" />

    <TextView
        android:id="@+id/detail_book_synopsis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:justificationMode="inter_word"
        android:layout_marginEnd="24dp"
        android:textSize="12sp"
        tools:text="To Kill a Mockingbird is a powerful novel set in the racially charged American South during the 1930s. It follows young Scout Finch as she navigates childhood in the town of Maycomb, Alabama. Through the eyes of Scout, we witness her father, Atticus Finch, defend Tom Robinson, a Black man falsely accused of assaulting a white woman. The story explores themes of justice, morality, and the loss of innocence in a deeply divided society."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detail_book_cover"
        app:layout_constraintTop_toBottomOf="@+id/detail_synopsis_label"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/detail_book_title"
        android:layout_width="226dp"
        android:layout_height="30dp"
        android:layout_marginTop="36dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/detail_book_cover"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/detail_book_cover"
        app:layout_constraintTop_toBottomOf="@+id/detail_book_cover"
        tools:text="To Kill A Mockingbird" />

    <TextView
        android:id="@+id/detail_book_author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        tools:text="Harper Lee"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/detail_book_title"
        app:layout_constraintEnd_toEndOf="@+id/detail_book_title"
        app:layout_constraintTop_toBottomOf="@+id/detail_book_title" />

    <TextView
        android:id="@+id/tv_book_price"
        android:layout_width="52dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.676"
        app:layout_constraintStart_toEndOf="@+id/detail_book_cover"
        app:layout_constraintTop_toBottomOf="@+id/detail_book_synopsis"
        tools:text="$100" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/content_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="detail_book_author,tv_book_price" />

    <TextView
        android:id="@+id/tv_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@+id/content_barrier"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/ex_indonesia_north_street"
        android:textColorHint="#CCCCCC"
        android:textColor="@color/black"
        android:background="@drawable/rounded_edittext_background"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:inputType="textPostalAddress"
        app:layout_constraintTop_toBottomOf="@+id/tv_address_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@+id/et_address"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/ex_0811_222_3333"
        android:textColorHint="#CCCCCC"
        android:textColor="@color/black"
        android:background="@drawable/rounded_edittext_background"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_general_error_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:textAlignment="center"
        android:textColor="#F37A7A"
        android:textSize="18sp"
        android:fontFamily="@font/open_sans"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_phone_number"
        tools:text="Error"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:background="@drawable/button_transparent_white_border"
        android:backgroundTint="@android:color/transparent" android:textColor="@color/white" android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/raleway_bold"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_buy"
        app:layout_constraintHorizontal_weight="1" />

    <Button
        android:id="@+id/btn_buy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/buy"
        android:fontFamily="@font/raleway_bold"
        android:backgroundTint="#FFD600"
        android:textColor="@color/white"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1" />

</androidx.constraintlayout.widget.ConstraintLayout>